Implementasjon av søk2 mot helsepersonellregister (#258)
