# src/main/kotlin/no/nav/syfo/helsepersonell/BehandlerApi.kt
@@ -1,11 +1,12 @@
 package no.nav.syfo.helsepersonell
 
 import io.ktor.http.HttpStatusCode
-import io.ktor.server.application.call
 import io.ktor.server.request.header
+import io.ktor.server.request.receive
 import io.ktor.server.response.respond
 import io.ktor.server.routing.Route
 import io.ktor.server.routing.get
+import io.ktor.server.routing.post
 import no.nav.syfo.logger
 
 fun Route.registerBehandlerApi(helsepersonellService: HelsepersonellService) {
@@ -58,6 +59,19 @@ fun Route.registerBehandlerApi(helsepersonellService: HelsepersonellService) {
                     }
                 }
             }
+        }
+    }
+
+    post("/behandlere") {
+        val soekeparametre = call.receive(Soekeparametre::class)
+
+        try {
+            call.respond(helsepersonellService.soekBehandlere(soekeparametre))
+        } catch (e: Exception) {
+            call.respond(
+                HttpStatusCode.InternalServerError,
+                e.message ?: "Kunne ikke finne helsepersonell.",
+            )
         }
     }
 }
