# src/main/kotlin/no/nav/syfo/helsepersonell/Behandlereresultat.kt
@@ -1,0 +1,5 @@
+package no.nav.syfo.helsepersonell
+
+data class Behandlereresultat(
+    val behandlere: List<Behandler>,
+)
